// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package fleet;

// Required by protoc-gen-go
option go_package = "infra/libs/fleet/protos/go";

import "google/protobuf/timestamp.proto";
import "event_id.proto";
import "event_type.proto";
import "machine_id.proto";
import "rack_id.proto";

message Event {
    EventID id = 1;
    oneof asset {
        RackID rack_id = 2;
        MachineID machine_id = 3;
    }
    EventType event_label = 4;
    string old_value = 5;
    string new_value = 6;
    google.protobuf.Timestamp updated_time = 7;
    message User {
        string name = 1;
        string email = 2;
    }
    User user = 8;
    string comment = 9;
}